20130911 ECF
 * Started plugin

20150517 ECF
 * Converted to SEO plugin
 * Add other useful meta tags

20160514 ECF
 * Facebook app_id