@@ -10,8 +10,8 @@
 if (IN_serendipity != true) {
   die ("Don't hack!");
 }
-    
-// $time_start = microtime(true);
+
+@define('PLUGIN_EVENT_SEO_VERSION', '0.0.5');
 
 // Probe for a language include with constants. Still include defines later on, if some constants were missing
 $probelang = dirname(__FILE__) . '/' . $serendipity['charset'] . 'lang_' . $serendipity['lang'] . '.inc.php';
@@ -33,7 +33,7 @@ class serendipity_event_seo extends serendipity_event
     $propbag->add('stackable',    false);
     $propbag->add('groups',       array('FRONTEND_VIEWS'));
     $propbag->add('author',       'E Camden Fisher <fishnix@gmail.com>');
-    $propbag->add('version',      '0.0.3');
+    $propbag->add('version',      PLUGIN_EVENT_SEO_VERSION);
     $propbag->add('requirements', array(
         'serendipity' => '1.5.0',
         'smarty'      => '2.6.7',
@@ -140,124 +140,143 @@ class serendipity_event_seo extends serendipity_event
     return true;
   }
 
-
-  function event_hook($event, &$bag, &$eventData) {
+  function event_hook($event, &$bag, &$eventData)
+  {
     global $serendipity;
 
     $hooks = &$bag->get('event_hooks');
 
     if (isset($hooks[$event])) {
-      switch($event) {
+      switch ($event) {
         case 'frontend_header':
-//          echo '<!--';
-//          echo print_r($GLOBALS);
-//          echo '-->';
-          if (!isset($GLOBALS['entry'][0])) {
-            if ($this->get_config('enable_og_metadata')) {
-              echo '<meta property="fb:app_id" content="' . $this->get_config('fb_app_id') . '" />' . "\n";
-              echo '<meta property="fb:admins" content="' . $this->get_config('fb_admins') . '" />' . "\n";
-              echo '<meta property="og:locale" content="en_US" />' . "\n";
-              echo '<meta property="og:type" content="website" />' . "\n";
-              echo '<meta property="og:title" content="' . $serendipity['blogTitle'] . '" />' . "\n";
-              echo '<meta property="og:url" content="http' . ($_SERVER['HTTPS'] ? 's' : '') . '://' . $_SERVER['HTTP_HOST'] . htmlspecialchars($_SERVER['REQUEST_URI']) . '" />' . "\n";
-              echo '<meta property="og:site_name" content="' . $serendipity['blogTitle'] . '" />' . "\n";
-              echo '<meta property="article:publisher" content="' . htmlspecialchars($this->get_config('fb_publisher')) . '" />' . "\n";
+          $time_start = microtime(true);
+
+          echo '<!-- serendipity_event_seo ' . PLUGIN_EVENT_SEO_VERSION . ' -->' . "\n";
+
+          $site = serendipity_specialchars($serendipity['blogTitle']);
+          $url = serendipity_specialchars('http' . ($_SERVER['HTTPS'] ? 's' : '') . '://' . $_SERVER['HTTP_HOST'] . $_SERVER['REQUEST_URI']);
+
+          // If this is an individual entry....
+          if (isset($GLOBALS['entry'][0])) {
+            // set the title to the entry title
+            $title = serendipity_specialchars(trim(strip_tags($GLOBALS['entry'][0]['title'])));
+
+            $desc = $GLOBALS['entry'][0]['properties']['meta_description'];
+            if (empty($desc)) {
+              $desc = str_replace("\n", " ", trim(substr(strip_tags($GLOBALS['entry'][0]['body']), 0, 200) . '...'));
             }
-
-            if ($this->get_config('enable_tw_metadata')) {
-              echo '<meta name="twitter:card" content="summary_large_image"/>' . "\n";
-              echo '<meta name="twitter:title" content="' . $serendipity['blogTitle'] . '"/>' . "\n";
-              echo '<meta name="twitter:site" content="' . $serendipity['blogTitle'] . '"/>' . "\n";
-              echo '<meta name="twitter:description" content="' . $serendipity['blogDescription'] . '"/>' . "\n";
-              echo '<meta name="twitter:domain" content="' . htmlspecialchars($this->get_config('twitter_domain')) . '"/>' . "\n";
-              echo '<meta name="twitter:creator" content="' . htmlspecialchars($this->get_config('twitter_creator')) . '"/>' . "\n";
-            }
-
-            if ($this->get_config('enable_gp_metadata')) {
-              echo '<link rel="canonical" href="http' . ($_SERVER['HTTPS'] ? 's' : '') . '://' . $_SERVER['HTTP_HOST'] . htmlspecialchars($_SERVER['REQUEST_URI']) . '" />' . "\n";
-              echo '<link rel="publisher" href="' . htmlspecialchars($this->get_config('google_publisher')) . '"/>' . "\n";
-            }
-
-            if ($this->get_config('enable_misc_metadata')) {
-              /* NA */
-            }
-
-            return true;
-          }
-
-          echo '<!-- serendipity_event_seo -->' . "\n";
-          if ($this->get_config('enable_og_metadata')) {
-            // Borrowed from serendipity_event_facebook
-            // Taken from: http://developers.facebook.com/docs/opengraph/
-            $title = htmlspecialchars(trim(strip_tags($GLOBALS['entry'][0]['title'])));
-            $desc = str_replace("\n", " ", trim(substr(strip_tags($GLOBALS['entry'][0]['body']), 0, 200) . '...'));
-            echo '<meta property="fb:app_id" content="' . $this->get_config('fb_app_id') . '" />' . "\n";
-            echo '<meta property="fb:admins" content="' . $this->get_config('fb_admins') . '" />' . "\n";
-            echo '<meta property="og:locale" content="en_US" />' . "\n";
-            echo '<meta property="og:title" content="' . $title . '" />' . "\n";
-            echo '<meta property="og:description" content="' . $desc . '" />' . "\n";
-            echo '<meta property="article:publisher" content="' . htmlspecialchars($this->get_config('fb_publisher')) . '" />' . "\n";
-
-            echo '<meta property="og:type" content="article" />' . "\n";
-            echo '<meta property="og:site_name" content="' . $serendipity['blogTitle'] . '" />' . "\n";
-
-            echo '<meta property="og:url" content="http' . ($_SERVER['HTTPS'] ? 's' : '') . '://' . $_SERVER['HTTP_HOST'] . htmlspecialchars($_SERVER['REQUEST_URI']) . '" />' . "\n";
+            $desc = serendipity_specialchars($desc);
 
             if (preg_match('@<img.*src=["\'](.+)["\']@imsU', $GLOBALS['entry'][0]['body'] . $GLOBALS['entry'][0]['extended'], $im)) {
-                echo '<meta property="og:image" content="http' . ($_SERVER['HTTPS'] ? 's' : '') . '://' . $_SERVER['HTTP_HOST'] . $im[1] . '" />' . "\n";
+              $image = serendipity_specialchars('http' . ($_SERVER['HTTPS'] ? 's' : '') . '://' . $_SERVER['HTTP_HOST'] . $im[1]);
+            } else {
+              $image = false;
             }
+          } else {
+            // set the title to the blog title
+            $title = serendipity_specialchars($serendipity['blogTitle']);
+            $desc = serendipity_specialchars($serendipity['blogDescription']);
+          }
 
-            echo '<meta property="og:updated_time" content="' . date('c',$GLOBALS['entry'][0]['last_modified']) .'" />' . "\n";
-            /* TODO: <meta property="article:section" content="SECTION NAME" /> */
+          if ($this->get_config('enable_og_metadata')) {
+            $this->generate_og_metadata($title, $desc, $site, $url, $image, isset($GLOBALS['entry'][0]));
           }
 
           if ($this->get_config('enable_tw_metadata')) {
-            $title = htmlspecialchars(trim(strip_tags($GLOBALS['entry'][0]['title'])));
-            $desc = str_replace("\n", " ", trim(substr(strip_tags($GLOBALS['entry'][0]['body']), 0, 200) . '...'));
-            echo '<meta name="twitter:card" content="summary_large_image" />' . "\n";
-            echo '<meta name="twitter:title" content="' . $title . '" />' . "\n";
-            echo '<meta name="twitter:description" content="' . $desc . '" />' . "\n";
-            echo '<meta name="twitter:site"' . $serendipity['blogTitle'] . '" />' . "\n";
-            echo '<meta name="twitter:domain" content="' . htmlspecialchars($this->get_config('twitter_domain')) . '"/>' . "\n";
-            echo '<meta name="twitter:creator" content="' . htmlspecialchars($this->get_config('twitter_creator')) . '"/>' . "\n";
-
-            if (preg_match('@<img.*src=["\'](.+)["\']@imsU', $GLOBALS['entry'][0]['body'] . $GLOBALS['entry'][0]['extended'], $im)) {
-              echo '<meta name="twitter:image:src" content="http' . ($_SERVER['HTTPS'] ? 's' : '') . '://' . $_SERVER['HTTP_HOST'] . $im[1] . '" />' . "\n";
-            }
+            $this->generate_tw_metadata($title, $desc, $site, $image, isset($GLOBALS['entry'][0]));
           }
 
           if ($this->get_config('enable_gp_metadata')) {
-            echo '<link rel="canonical" href="http' . ($_SERVER['HTTPS'] ? 's' : '') . '://' . $_SERVER['HTTP_HOST'] . htmlspecialchars($_SERVER['REQUEST_URI']) . '" />' . "\n";
-            echo '<link rel="publisher" href="' . htmlspecialchars($this->get_config('google_publisher')) . '" />' . "\n";
-
-          }
-
-          if ($this->get_config('enable_pe_metadata')) {
-            $title = htmlspecialchars(trim(strip_tags($GLOBALS['entry'][0]['title'])));
-            $desc = str_replace("\n", " ", trim(substr(strip_tags($GLOBALS['entry'][0]['body']), 0, 200) . '...'));
-            echo '<meta name="pubexchange:headline" content="' . $title . '" />' . "\n";
-            echo '<meta name="pubexchange:description" content="' . $desc . '" />' . "\n";
-            if (preg_match('@<img.*src=["\'](.+)["\']@imsU', $GLOBALS['entry'][0]['body'] . $GLOBALS['entry'][0]['extended'], $im)) {
-              $imagefile = pathinfo($im[1]);
-              $thumbnail = $imagefile['dirname'] . '/' . $imagefile['filename'] . '.serendipityThumb' . '.' . $imagefile['extension'];
-              echo '<meta name="pubexchange:image" content="http' . ($_SERVER['HTTPS'] ? 's' : '') . '://' . $_SERVER['HTTP_HOST'] . $thumbnail . '" />' . "\n";
-            }
+            $this->generate_gp_metadata($url);
           }
 
           if ($this->get_config('enable_misc_metadata')) {
-            echo '<meta property="article:published_time" content="' . date('c', $GLOBALS['entry'][0]['timestamp']) . '" />' . "\n";
-            echo '<meta property="article:modified_time" content="' . date('c', $GLOBALS['entry'][0]['last_modified']) . '" />' . "\n";
+            $this->generate_misc_metadata(isset($GLOBALS['entry'][0]));
           }
 
+          if ($this->get_config('enable_pe_metadata')) {
+            $this->generate_pe_metadata($title, $desc, $image, isset($GLOBALS['entry'][0]));
+          }
+
+          $time_end = microtime(true);
+          $time = $time_end - $time_start;
+
+          echo '<!-- serendipity_event_seo :::TIMING::: ' . $time . ' seconds' . "\n";
+
           return true;
-        break;
+          break;
         default:
           return false;
-        }
+      }
     } else {
       return false;
     }
   }
-}
 
+  function generate_og_metadata(&$title, &$desc, &$site, &$url, &$image, $entry_page = false) {
+    // Content borrowed from serendipity_event_facebook,
+    // http://developers.facebook.com/docs/opengraph/
+    echo '<meta property="fb:app_id" content="' . $this->get_config('fb_app_id') . '" />' . "\n";
+    echo '<meta property="fb:admins" content="' . $this->get_config('fb_admins') . '" />' . "\n";
+    echo '<meta property="og:locale" content="en_US" />' . "\n";
+    echo '<meta property="og:title" content="' . $title . '" />' . "\n";
+    echo '<meta property="og:description" content="' . $desc . '" />' . "\n";
+    echo '<meta property="og:url" content="' . $url . '" />' . "\n";
+    echo '<meta property="article:publisher" content="' . serendipity_specialchars($this->get_config('fb_publisher')) . '" />' . "\n";
+    echo '<meta property="og:site_name" content="' . $site . '" />' . "\n";
+
+    if ($entry_page) {
+      echo '<meta property="og:type" content="article" />' . "\n";
+      echo '<meta property="og:updated_time" content="' . date('c', $GLOBALS['entry'][0]['last_modified']) . '" />' . "\n";
+      /* TODO: <meta property="article:section" content="SECTION NAME" /> */
+
+      if ($image) {
+        echo '<meta property="og:image" content="' . $image . '" />' . "\n";
+      }
+    } else {
+      echo '<meta property="og:type" content="website" />' . "\n";
+    }
+  }
+
+  function generate_tw_metadata(&$title, &$desc, &$site, $entry_page = false) {
+    echo '<meta name="twitter:card" content="summary_large_image" />' . "\n";
+    echo '<meta name="twitter:title" content="' . $title . '" />' . "\n";
+    echo '<meta name="twitter:description" content="' . $desc . '" />' . "\n";
+    echo '<meta name="twitter:site"' . $site . '" />' . "\n";
+    echo '<meta name="twitter:domain" content="' . serendipity_specialchars($this->get_config('twitter_domain')) . '"/>' . "\n";
+    echo '<meta name="twitter:creator" content="' . serendipity_specialchars($this->get_config('twitter_creator')) . '"/>' . "\n";
+
+    if ($image) {
+      echo '<meta property="twitter:image:src" content="' . $image . '" />' . "\n";
+    }
+  }
+
+  function generate_gp_metadata($url) {
+    echo '<link rel="canonical" href="' . $url . '" />' . "\n";
+    echo '<link rel="publisher" href="' . serendipity_specialchars($this->get_config('google_publisher')) . '" />' . "\n";
+  }
+
+  function generate_misc_metadata($entry_page = false) {
+    if ($entry_page) {
+      echo '<meta property="article:published_time" content="' . date('c', $GLOBALS['entry'][0]['timestamp']) . '" />' . "\n";
+      echo '<meta property="article:modified_time" content="' . date('c', $GLOBALS['entry'][0]['last_modified']) . '" />' . "\n";
+    } else {
+      /* NA */
+    }
+  }
+
+  function generate_pe_metadata(&$title, &$desc, &$image, $entry_page = false) {
+    if ($entry_page) {
+      echo '<meta name="pubexchange:headline" content="' . $title . '" />' . "\n";
+      echo '<meta name="pubexchange:description" content="' . $desc . '" />' . "\n";
+      if ($image) {
+        $imagefile = pathinfo($image);
+        $thumbnail = $imagefile['dirname'] . '/' . $imagefile['filename'] . '.serendipityThumb' . '.' . $imagefile['extension'];
+        echo '<meta name="pubexchange:image" content="' . $thumbnail . '" />' . "\n";
+      }
+    } else {
+      /* NA */
+    }
+  }
+}
 ?>
